# Baraza

./: AllBills.qml  BigTileTemplate.qml  BillTileTemplate.qml  ButtonTemplate.qml  CMakeLists.txt  ContentFlowPage.qml  ContentTemplate.qml  ContributorsPage.qml  CustomButton.qml  CustomDropshadow.qml  CustomTextInput.qml  DynamicComponentLoader.js  ForumPage1.qml  ForumPage1Flow.qml  HistoricalDocsTemplate.qml  HistoricalDocuments.qml  Home.qml  HomePage.qml  LearningContentPage.qml  LearningHomePage.qml  LearningPageFlow.qml  LessonTemplate.qml  LoginPage.qml  Main.qml  PlainButton.qml  Polls.qml  PollsSurveys.qml  README.md  ResourcesPage.qml  SideButtons.qml  SmallTileTemplate.qml  TileTemplate.qml  VideoTileTemplate.qml  appIcon.rc  main.cpp
assets/: AIBill2023.html  ClimateChangeBill.html  DataProtectionBill.html  EmploymentBill.html  FinanceBill2025.html  Lesson1.html  group5.html  group5style.css  kenyaFlagMountain.avif
